Fix: file name overflow at table and details pane

--- a/styles/organization/orgId/Files.module.sass
+++ b/styles/organization/orgId/Files.module.sass
@@ -118,7 +118,9 @@
         gap: 1rem
         box-shadow: -5px 0 20px #20202020
 
-        overflow: scroll
+        // overflow: scroll
+        overflow-y: auto
+        overflow-x: hidden
 
         position: sticky
         left: 0
@@ -133,6 +135,8 @@
             height: 100%
             justify-content: space-between
             position: relative
+
+            white-space: normal
 
             > section
                 position: absolute
@@ -158,6 +162,10 @@
                     display: flex
                     flex-direction: column
                     gap: 0.5rem
+
+                    > label
+                        > input
+                            width: 100%
 
     section
         width: 100%
@@ -206,13 +214,10 @@
 
 
                         &:first-child
-                            min-width: 20vw
+                            min-width: 10vw
+                            max-width: 20vw
                             width: auto
                             max-width: auto
-
-                            overflow: hidden
-                            white-space: nowrap
-                            text-overflow: ellipsis
 
                             a
                                 overflow: hidden
@@ -243,9 +248,6 @@
                         &:not(:first-child)
                             width: 14vw
                             max-width: 14vw
-                            overflow: hidden
-                            white-space: nowrap
-                            text-overflow: ellipsis
 
                             p
                                 overflow: hidden
